--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "dependencies": {
     "@react-native-community/async-storage": "1.7.1",
     "@react-native-community/datetimepicker": "2.1.0",
+    "@react-navigation/drawer": "^5.1.1",
+    "@react-navigation/native": "^5.0.9",
     "axios": "0.19.0",
     "moment": "2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-gesture-handler": "1.5.2",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-gravatar": "1.0.2",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-reanimated": "1.4.0",
-    "react-native-screens": "1.0.0-alpha.23",
-    "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "4.0.10",
-    "react-navigation-drawer": "2.3.3"
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.2.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
