--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "axios": "0.19.0",
     "moment": "2.24.0",
     "react": "16.9.0",
