--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "1.7.1",
+    "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/drawer": "^5.1.1",
