--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gravatar": "1.0.2",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
