--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,9 +130,11 @@ android {
     defaultConfig {
         applicationId "com.contrateepresteapp"
         minSdkVersion rootProject.ext.minSdkVersion
+        missingDimensionStrategy 'react-native-camera', 'general' // <--- insert this line
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
     }
     splits {
         abi {
@@ -179,6 +181,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
