--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'contrateepresteapp' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'contrateepresteappTests' do
     inherit! :search_paths
     # Pods for testing
