--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera": "^3.21.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gravatar": "1.0.2",
