--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gravatar": "1.0.2",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.7.0",
