--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.5.6",
+    "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
