--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-camera": "^3.22.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-gifted-chat": "^0.16.0",
     "react-native-gravatar": "1.0.2",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-material-dropdown": "^0.11.1",
