--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -186,6 +186,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-fs')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
