--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native": "0.61.5",
     "react-native-camera": "^3.26.0",
     "react-native-elements": "^1.2.7",
-    "react-native-fs": "^2.16.6",
+    "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-gifted-chat": "^0.16.0",
     "react-native-gravatar": "1.0.2",
