--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,10 @@ target 'contrateepresteapp' do
 
 
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'contrateepresteappTests' do
     inherit! :search_paths
     # Pods for testing
