--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/netinfo": "^5.9.2",
     "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "axios": "0.19.0",
+    "emoji-utils": "^1.0.1",
+    "laravel-echo": "^1.8.0",
     "moment": "2.24.0",
+    "prop-types": "^15.7.2",
+    "pusher-js": "^6.0.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-camera": "^3.26.0",
