--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-search-filter": "^0.1.5",
     "react-native-textarea": "^1.0.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9"
