--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gifted-chat": "^0.16.0",
     "react-native-gravatar": "1.0.2",
     "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.8.0",
